--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ jsonpointer==3.0.0
 langchain==1.2.10
 langchain-core==1.2.11
 langchain-openai==1.1.9
-langchain-pinecone==0.2.13
+langchain-pinecone
 langgraph==1.0.8
 langgraph-checkpoint==4.0.0
 langgraph-prebuilt==1.0.7
