--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ langgraph-prebuilt==1.0.7
 langgraph-sdk==0.3.5
 langsmith==0.7.1
 multidict==6.7.1
-numpy==2.2.6
+numpy
 openai==2.20.0
 orjson==3.11.7
 ormsgpack==1.12.2
